--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-   <link rel="shortcut icon" href="travel.png" type="image/x-icon">
+   <link rel="shortcut icon" href="paper-plane.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boundless Journeys</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
